[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
base64 = "0.22"
solana-sdk = "1.18"
spl-token = "4.0.0"
hyper = "1.3"
